# hopebot

./: .flake8  .gitignore  README.md  base-config.yaml  maubot.yaml  pyproject.toml
.github/workflows/: python-lint.yml
contrib/: make_tokens.sh
hopebot/: __init__.py  bot.py  config.py  db.py  image_gen.py  token_utils.py  types.py  util.py
