[build-system]
requires = ["setuptools~=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hopebot"
version = "1.8.0"
description = "A maubot plugin for the HOPE conference Matrix systems"
maintainers = [
    {name = "mal", email = "mal@sec.gd"},
]
authors = [
    {name = "mal", email = "mal@sec.gd"},
]
readme = "README.md"
keywords = ["matrix", "maubot"]
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "PySide6~=6.7.2",
    "numpy~=2.0.0",
    "perlin-numpy",
]

[project.urls]
Repository = "https://github.com/half-duplex/hopebot"

[project.optional-dependencies]
dev = [
    "black~=24.4.2",
    "flake8~=7.1.0",
    "flake8-future-import~=0.4.7",
    "flake8-import-order~=0.18.2",
    "flake8-type-checking~=2.9.1",
]
