[project]
name = "hopebot"
version = "2.0.1pre1"
description = "A maubot plugin for the HOPE conference Matrix systems"
maintainers = [
    {name = "mal", email = "hopebot@sec.gd"},
]
authors = [
    {name = "mal", email = "hopebot@sec.gd"},
]
readme = "README.md"
keywords = ["matrix", "maubot"]
license = "EUPL-1.2"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
dependencies = [
    "maubot[encryption]~=0.5.2",
    "asyncpg~=0.30.0",
    "numpy~=2.0",
    "perlin-numpy~=0.0.1",
    "PySide6~=6.9",
    "python-dateutil~=2.9",
]

[project.urls]
Repository = "https://github.com/half-duplex/hopebot"

[dependency-groups]
dev = [
    "black~=25.1",
    "flake8~=7.3",
    "flake8-future-import ~= 0.4.7",
    "flake8-isort ~= 6.1",
    "flake8-pyproject ~= 1.2",
    "flake8-type-checking ~= 3.0",
    "mypy ~= 1.17.1",
    "asyncpg-stubs~=0.30.2",
    "types-python-dateutil~=2.9",
]

[project.scripts]
hopebot-tokens = "hopebot.token_utils:cli"

[build-system]
requires = ["setuptools~=80.9"]
build-backend = "setuptools.build_meta"

[tool.flake8]
exclude = [".venv", "build/"]
max-line-length = 99
extend-ignore = [
    # flake8-future-imports:
    # https://pypi.org/project/flake8-future-import/#error-codes
    # https://docs.python.org/3/library/__future__.html
    # not needed on py>=3.7
    "FI10", "FI11", "FI12", "FI13", "FI14", "FI15", "FI16", "FI17",
    # needed on py<TBD
    "FI58",
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_sort_within_sections = true
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
multi_line_output = 3
order_by_type = false
skip_gitignore = true
split_on_trailing_comma = true
use_parentheses = true

[tool.mypy]
exclude_gitignore = true
#disallow_untyped_defs = true
#disallow_any_unimported = true
#no_implicit_optional = true
#check_untyped_defs = true
#warn_return_any = true
#show_error_codes = true
#warn_unused_ignores = true

[tool.setuptools]
packages = ["hopebot"]

[tool.uv.sources]
perlin-numpy = { git = "https://github.com/pvigier/perlin-numpy" }
